--- a/Replication_of_RL_Lateral_Controller_for_Autonomous_Vehicles.ipynb
+++ b/Replication_of_RL_Lateral_Controller_for_Autonomous_Vehicles.ipynb
@@ -21,14 +21,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 47,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "collapsed": true,
         "id": "AAc_-AeGEE5H",
-        "outputId": "90b2ff62-d9a1-4456-b4e0-fceaa6242171"
+        "outputId": "28adaec3-f0e6-444c-ac8f-7aa4bb72e578"
       },
       "outputs": [
         {
@@ -76,7 +76,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 48,
       "metadata": {
         "id": "-ZwGd9eVEWGY"
       },
@@ -114,24 +114,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 49,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "y922XK-cIewr",
-        "outputId": "bf03d209-1e67-4199-d73c-79644479272f"
+        "outputId": "8bb905d1-d383-45f9-c41c-4f586dca316b"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<highway_env.envs.common.action.ContinuousAction at 0x7b09d7962e10>"
+              "<highway_env.envs.common.action.ContinuousAction at 0x7b09e277aad0>"
             ]
           },
           "metadata": {},
-          "execution_count": 33
+          "execution_count": 49
         }
       ],
       "source": [
@@ -156,7 +156,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 50,
       "metadata": {
         "id": "2HbWr4urTXQ8"
       },
@@ -294,7 +294,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 51,
       "metadata": {
         "id": "SJ68SiyJTSx7"
       },
@@ -395,7 +395,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 52,
       "metadata": {
         "id": "7g2c9HRSJ8Xs"
       },
@@ -525,7 +525,7 @@
       "metadata": {
         "id": "ydU55ZY5eX4U"
       },
-      "execution_count": 37,
+      "execution_count": 53,
       "outputs": []
     },
     {
@@ -539,7 +539,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 54,
       "metadata": {
         "id": "jU_TDnfv7CzO"
       },
@@ -602,7 +602,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 55,
       "metadata": {
         "id": "gPl1lptqKdAy"
       },
@@ -644,7 +644,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RYA-H09sIw2_",
-        "outputId": "aa375a3a-bfe3-4767-e72b-5e03f74a0238"
+        "outputId": "dedb0893-8dac-4904-e643-2aaebd8e42ae"
       },
       "outputs": [
         {
@@ -652,109 +652,14 @@
           "name": "stdout",
           "text": [
             "**** Target network updated at episode 0 ****\n",
-            "Episode 0 finished after 61 steps. Total Reward: -101.91\n",
-            "Episode 1 finished after 73 steps. Total Reward: -120.47\n",
-            "Episode 2 finished after 67 steps. Total Reward: -109.50\n",
-            "Episode 3 finished after 70 steps. Total Reward: -115.51\n",
-            "Episode 4 finished after 59 steps. Total Reward: -95.91\n",
-            "Episode 5 finished after 78 steps. Total Reward: -127.92\n",
-            "Episode 6 finished after 66 steps. Total Reward: -109.48\n",
-            "Episode 7 finished after 56 steps. Total Reward: -89.72\n",
-            "Episode 8 finished after 81 steps. Total Reward: -130.66\n",
-            "Episode 9 finished after 99 steps. Total Reward: -161.00\n",
-            "Episode 10 finished after 58 steps. Total Reward: -95.15\n",
-            "Episode 11 finished after 54 steps. Total Reward: -88.13\n",
-            "Episode 12 finished after 63 steps. Total Reward: -105.48\n",
-            "Episode 13 finished after 69 steps. Total Reward: -112.32\n",
-            "Episode 14 finished after 53 steps. Total Reward: -87.18\n",
-            "Avg Loss (last 53 steps): 11.1021\n",
-            "Episode 15 finished after 61 steps. Total Reward: -100.35\n",
-            "Avg Loss (last 61 steps): 0.4310\n",
-            "Episode 16 finished after 61 steps. Total Reward: -100.12\n",
-            "Avg Loss (last 61 steps): 0.0283\n",
-            "Episode 17 finished after 72 steps. Total Reward: -115.98\n",
-            "Avg Loss (last 72 steps): 10.1258\n",
-            "Episode 18 finished after 58 steps. Total Reward: -94.80\n",
-            "Avg Loss (last 58 steps): 7.6206\n",
-            "Episode 19 finished after 98 steps. Total Reward: -156.63\n",
-            "Avg Loss (last 98 steps): 0.0552\n",
-            "Episode 20 finished after 106 steps. Total Reward: -171.31\n",
-            "Avg Loss (last 106 steps): 0.0257\n",
-            "Episode 21 finished after 65 steps. Total Reward: -103.50\n",
-            "Avg Loss (last 65 steps): 0.0257\n",
-            "Episode 22 finished after 102 steps. Total Reward: -162.10\n",
-            "Avg Loss (last 102 steps): 0.0289\n",
-            "Episode 23 finished after 152 steps. Total Reward: -243.09\n",
-            "Avg Loss (last 152 steps): 0.0287\n",
-            "Episode 24 finished after 142 steps. Total Reward: -228.66\n",
-            "Avg Loss (last 142 steps): 0.0279\n",
-            "Episode 25 finished after 54 steps. Total Reward: -86.16\n",
-            "Avg Loss (last 54 steps): 0.0275\n",
-            "Episode 26 finished after 113 steps. Total Reward: -183.71\n",
-            "Avg Loss (last 113 steps): 0.0271\n",
-            "Episode 27 finished after 80 steps. Total Reward: -128.35\n",
-            "Avg Loss (last 80 steps): 0.0275\n",
-            "Episode 28 finished after 200 steps. Total Reward: -323.25\n",
-            "Avg Loss (last 200 steps): 0.0269\n",
-            "Episode 29 finished after 112 steps. Total Reward: -180.84\n",
-            "Avg Loss (last 112 steps): 0.0254\n",
-            "Episode 30 finished after 101 steps. Total Reward: -163.59\n",
-            "Avg Loss (last 101 steps): 0.0245\n",
-            "Episode 31 finished after 72 steps. Total Reward: -116.31\n",
-            "Avg Loss (last 72 steps): 0.0244\n",
-            "Episode 32 finished after 91 steps. Total Reward: -148.65\n",
-            "Avg Loss (last 91 steps): 0.0247\n",
-            "Episode 33 finished after 107 steps. Total Reward: -173.04\n",
-            "Avg Loss (last 107 steps): 0.0240\n",
-            "Episode 34 finished after 104 steps. Total Reward: -167.01\n",
-            "Avg Loss (last 104 steps): 196.0831\n",
-            "Episode 35 finished after 178 steps. Total Reward: -282.88\n",
-            "Avg Loss (last 178 steps): 1.9867\n",
-            "Episode 36 finished after 71 steps. Total Reward: -115.79\n",
-            "Avg Loss (last 71 steps): 0.0248\n",
-            "Episode 37 finished after 123 steps. Total Reward: -191.62\n",
-            "Avg Loss (last 123 steps): 0.0263\n",
-            "Episode 38 finished after 103 steps. Total Reward: -160.29\n",
-            "Avg Loss (last 103 steps): 0.0270\n",
-            "Episode 39 finished after 174 steps. Total Reward: -273.52\n",
-            "Avg Loss (last 174 steps): 0.0288\n",
-            "Episode 40 finished after 72 steps. Total Reward: -118.97\n",
-            "Avg Loss (last 72 steps): 0.0291\n",
-            "Episode 41 finished after 199 steps. Total Reward: -320.94\n",
-            "Avg Loss (last 199 steps): 0.0292\n",
-            "Episode 42 finished after 177 steps. Total Reward: -286.06\n",
-            "Avg Loss (last 177 steps): 0.0283\n",
-            "Episode 43 finished after 170 steps. Total Reward: -272.01\n",
-            "Avg Loss (last 170 steps): 0.0286\n",
-            "Episode 44 finished after 134 steps. Total Reward: -215.46\n",
-            "Avg Loss (last 134 steps): 0.0278\n",
-            "Episode 45 finished after 143 steps. Total Reward: -228.36\n",
-            "Avg Loss (last 143 steps): 0.0277\n",
-            "Episode 46 finished after 154 steps. Total Reward: -249.85\n",
-            "Avg Loss (last 154 steps): 0.0283\n",
-            "Episode 47 finished after 168 steps. Total Reward: -267.21\n",
-            "Avg Loss (last 168 steps): 0.0278\n",
-            "Episode 48 finished after 125 steps. Total Reward: -201.52\n",
-            "Avg Loss (last 125 steps): 0.0280\n",
-            "Episode 49 finished after 179 steps. Total Reward: -291.24\n",
-            "Avg Loss (last 179 steps): 0.0282\n",
-            "**** Target network updated at episode 50 ****\n",
-            "Episode 50 finished after 75 steps. Total Reward: -124.07\n",
-            "Avg Loss (last 75 steps): 0.0287\n",
-            "Episode 51 finished after 110 steps. Total Reward: -171.72\n",
-            "Avg Loss (last 110 steps): 0.2742\n",
-            "Episode 52 finished after 56 steps. Total Reward: -89.91\n",
-            "Avg Loss (last 56 steps): 0.0444\n",
-            "Episode 53 finished after 64 steps. Total Reward: -104.16\n",
-            "Avg Loss (last 64 steps): 0.0292\n",
-            "Episode 54 finished after 58 steps. Total Reward: -92.47\n",
-            "Avg Loss (last 58 steps): 0.0267\n",
-            "Episode 55 finished after 64 steps. Total Reward: -101.74\n",
-            "Avg Loss (last 64 steps): 0.0279\n",
-            "Episode 56 finished after 69 steps. Total Reward: -111.88\n",
-            "Avg Loss (last 69 steps): 0.0273\n",
-            "Episode 57 finished after 53 steps. Total Reward: -86.40\n",
-            "Avg Loss (last 53 steps): 0.0274\n"
+            "Episode 0 finished after 64 steps. Total Reward: -105.18\n",
+            "Episode 1 finished after 70 steps. Total Reward: -113.80\n",
+            "Episode 2 finished after 53 steps. Total Reward: -89.48\n",
+            "Episode 3 finished after 86 steps. Total Reward: -136.36\n",
+            "Episode 4 finished after 55 steps. Total Reward: -92.24\n",
+            "Episode 5 finished after 53 steps. Total Reward: -86.11\n",
+            "Episode 6 finished after 53 steps. Total Reward: -86.76\n",
+            "Episode 7 finished after 56 steps. Total Reward: -92.88\n"
           ]
         }
       ],
@@ -781,6 +686,7 @@
         "timesteps = 40000\n",
         "update_target_frequency = 50\n",
         "target_id = env.unwrapped.vehicle.lane_index[-1]\n",
+        "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
         "\n",
         "# Environment Information\n",
         "L = env.unwrapped.vehicle.LENGTH\n",
@@ -788,13 +694,14 @@
         "state_dim = len(agent_state)\n",
         "epsilon = 0.5\n",
         "epsilon_decay_rate = 1000\n",
+        "threshold = 30\n",
         "\n",
         "# Initialize Buffer\n",
         "buffer = Experience_Buffer(buffer_size)\n",
         "\n",
         "# Setup Lateral Control Agent\n",
-        "target_network = Agent(state_dim)\n",
-        "policy_network = Agent(state_dim)\n",
+        "target_network = Agent(state_dim).to(device)\n",
+        "policy_network = Agent(state_dim).to(device)\n",
         "\n",
         "# Initialize target network\n",
         "target_network.load_state_dict(policy_network.state_dict())\n",
@@ -929,18 +836,39 @@
         "        \"\"\"Q-Learning Update\"\"\"\n",
         "        ########################################################################\n",
         "        if buffer.size() >= batch_size:\n",
+        "            # Sample and unpack experiences.\n",
         "            rand_experience = buffer.sample_experience(batch_size=batch_size)\n",
         "            transitions = torch.cat([t for t in rand_experience if isinstance(t, torch.Tensor)], dim=0)\n",
         "            states, actions, rewards, next_states, terminals = torch.split(\n",
         "                transitions, [state_dim, 1, 1, state_dim, 1], dim=1)\n",
+        "\n",
+        "            # Compute current Q-values for the taken actions.\n",
         "            current_q_values = policy_network(states, actions, terminals)\n",
         "\n",
         "            with torch.no_grad():\n",
-        "                next_actions = target_network.action(next_states, next_states[5])\n",
-        "                next_q_values = target_network(next_states, next_actions, terminals)\n",
+        "                # Compute Q-values for all possible next actions.\n",
+        "                q_next_all = []\n",
         "\n",
-        "            target_q_values = rewards + gamma * next_q_values * (1 - terminals)\n",
+        "                for a in range(len(actions)):\n",
+        "                    action_tensor = torch.full((next_states.size(0), 1),\n",
+        "                                              a,\n",
+        "                                              dtype=actions.dtype,\n",
+        "                                              device=next_states.device)\n",
+        "                    q_val = target_network(next_states, action_tensor, terminals)\n",
+        "                    q_next_all.append(q_val)\n",
+        "\n",
+        "                # Concatenate along the action dimension to get a tensor of shape [batch_size, num_actions].\n",
+        "                q_next_all = torch.cat(q_next_all, dim=1)\n",
+        "\n",
+        "                # Take the maximum Q-value across actions for each next state.\n",
+        "                max_next_q_values, _ = q_next_all.max(dim=1, keepdim=True)\n",
+        "\n",
+        "            # Compute the target Q-values using the Bellman update.\n",
+        "            target_q_values = rewards + gamma * max_next_q_values * (1 - terminals)\n",
+        "\n",
+        "            # Compute the loss.\n",
         "            loss = policy_loss_fn(current_q_values, target_q_values.detach())\n",
+        "\n",
         "            loss_history.append(loss.item())\n",
         "            total_steps_taken += 1\n",
         "            policy_optimizer.zero_grad()\n",
