--- a/Replication_of_RL_Lateral_Controller_for_Autonomous_Vehicles.ipynb
+++ b/Replication_of_RL_Lateral_Controller_for_Autonomous_Vehicles.ipynb
@@ -21,14 +21,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 2,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "collapsed": true,
         "id": "AAc_-AeGEE5H",
-        "outputId": "28adaec3-f0e6-444c-ac8f-7aa4bb72e578"
+        "outputId": "d55d73ea-35df-4695-d964-ce89c79570f4"
       },
       "outputs": [
         {
@@ -36,7 +37,8 @@
           "name": "stdout",
           "text": [
             "Requirement already satisfied: pygame in /usr/local/lib/python3.11/dist-packages (2.6.1)\n",
-            "Requirement already satisfied: highway-env in /usr/local/lib/python3.11/dist-packages (1.10.1)\n",
+            "Collecting highway-env\n",
+            "  Downloading highway_env-1.10.1-py3-none-any.whl.metadata (16 kB)\n",
             "Requirement already satisfied: gymnasium>=1.0.0a2 in /usr/local/lib/python3.11/dist-packages (from highway-env) (1.1.1)\n",
             "Requirement already satisfied: farama-notifications>=0.0.1 in /usr/local/lib/python3.11/dist-packages (from highway-env) (0.0.4)\n",
             "Requirement already satisfied: numpy>=1.21.0 in /usr/local/lib/python3.11/dist-packages (from highway-env) (2.0.2)\n",
@@ -56,7 +58,11 @@
             "Requirement already satisfied: python-dateutil>=2.7 in /usr/local/lib/python3.11/dist-packages (from matplotlib->highway-env) (2.8.2)\n",
             "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.11/dist-packages (from pandas->highway-env) (2025.2)\n",
             "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.11/dist-packages (from pandas->highway-env) (2025.2)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.11/dist-packages (from python-dateutil>=2.7->matplotlib->highway-env) (1.17.0)\n"
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.11/dist-packages (from python-dateutil>=2.7->matplotlib->highway-env) (1.17.0)\n",
+            "Downloading highway_env-1.10.1-py3-none-any.whl (104 kB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m105.0/105.0 kB\u001b[0m \u001b[31m1.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: highway-env\n",
+            "Successfully installed highway-env-1.10.1\n"
           ]
         }
       ],
@@ -76,7 +82,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 3,
       "metadata": {
         "id": "-ZwGd9eVEWGY"
       },
@@ -114,24 +120,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 4,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "y922XK-cIewr",
-        "outputId": "8bb905d1-d383-45f9-c41c-4f586dca316b"
+        "outputId": "9bc36d04-f821-4b27-b473-a44eab901be1"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<highway_env.envs.common.action.ContinuousAction at 0x7b09e277aad0>"
+              "<highway_env.envs.common.action.ContinuousAction at 0x7a3915d307d0>"
             ]
           },
           "metadata": {},
-          "execution_count": 49
+          "execution_count": 4
         }
       ],
       "source": [
@@ -156,7 +163,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 15,
       "metadata": {
         "id": "2HbWr4urTXQ8"
       },
@@ -294,7 +301,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 18,
       "metadata": {
         "id": "SJ68SiyJTSx7"
       },
@@ -368,10 +375,9 @@
         "\n",
         "    return q_value\n",
         "\n",
-        "  def action(self, state, target_id):\n",
+        "  def action(self, state):\n",
         "      # Convert it to a tensor\n",
         "      if isinstance(state, dict):\n",
-        "          state['lane_id'] = target_id\n",
         "          state_tensor = torch.tensor(\n",
         "              [state[key] for key in ['vx', 'longitudinal_acceleration', 'x', 'y', 'thetha', 'lane_id', 'lane_width', 'self_curvature']],\n",
         "              dtype=torch.float32\n",
@@ -395,7 +401,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 19,
       "metadata": {
         "id": "7g2c9HRSJ8Xs"
       },
@@ -525,7 +531,7 @@
       "metadata": {
         "id": "ydU55ZY5eX4U"
       },
-      "execution_count": 53,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -539,7 +545,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 9,
       "metadata": {
         "id": "jU_TDnfv7CzO"
       },
@@ -602,7 +608,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": 21,
       "metadata": {
         "id": "gPl1lptqKdAy"
       },
@@ -644,7 +650,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RYA-H09sIw2_",
-        "outputId": "dedb0893-8dac-4904-e643-2aaebd8e42ae"
+        "outputId": "c254e145-abb7-4a2a-e562-8a6df317210c"
       },
       "outputs": [
         {
@@ -652,14 +658,15 @@
           "name": "stdout",
           "text": [
             "**** Target network updated at episode 0 ****\n",
-            "Episode 0 finished after 64 steps. Total Reward: -105.18\n",
-            "Episode 1 finished after 70 steps. Total Reward: -113.80\n",
-            "Episode 2 finished after 53 steps. Total Reward: -89.48\n",
-            "Episode 3 finished after 86 steps. Total Reward: -136.36\n",
-            "Episode 4 finished after 55 steps. Total Reward: -92.24\n",
-            "Episode 5 finished after 53 steps. Total Reward: -86.11\n",
-            "Episode 6 finished after 53 steps. Total Reward: -86.76\n",
-            "Episode 7 finished after 56 steps. Total Reward: -92.88\n"
+            "Episode 0 finished after 57 steps. Total Reward: -91.67\n",
+            "Episode 1 finished after 56 steps. Total Reward: -92.99\n",
+            "Episode 2 finished after 86 steps. Total Reward: -142.55\n",
+            "Episode 3 finished after 58 steps. Total Reward: -97.59\n",
+            "Episode 4 finished after 73 steps. Total Reward: -117.21\n",
+            "Episode 5 finished after 53 steps. Total Reward: -86.15\n",
+            "Episode 6 finished after 57 steps. Total Reward: -91.72\n",
+            "Episode 7 finished after 70 steps. Total Reward: -113.51\n",
+            "Episode 8 finished after 94 steps. Total Reward: -152.69\n"
           ]
         }
       ],
@@ -768,13 +775,14 @@
         "\n",
         "        # Determine target lane\n",
         "        target_id = activated_target_lane\n",
+        "        agent_state = state_manager.ego_state_agent(target_id=target_id)\n",
         "\n",
         "        # Epsilon-greedy Action\n",
         "        if random.random() < epsilon:\n",
         "          agent_action = random.uniform(-1, 1)\n",
         "        else:\n",
         "          with torch.no_grad():\n",
-        "              agent_action = policy_network.action(agent_state, target_id=target_id).item()\n",
+        "              agent_action = policy_network.action(agent_state).item()\n",
         "\n",
         "        # Store prior state for buffer\n",
         "        old_state = agent_state\n",
@@ -846,22 +854,19 @@
         "            current_q_values = policy_network(states, actions, terminals)\n",
         "\n",
         "            with torch.no_grad():\n",
-        "                # Compute Q-values for all possible next actions.\n",
-        "                q_next_all = []\n",
+        "              target_network.eval()\n",
         "\n",
-        "                for a in range(len(actions)):\n",
-        "                    action_tensor = torch.full((next_states.size(0), 1),\n",
-        "                                              a,\n",
-        "                                              dtype=actions.dtype,\n",
-        "                                              device=next_states.device)\n",
-        "                    q_val = target_network(next_states, action_tensor, terminals)\n",
-        "                    q_next_all.append(q_val)\n",
+        "              # Compute Q-values for all possible next actions.\n",
+        "              q_next_all = []\n",
+        "              action_tensor = target_network.action(next_states)\n",
+        "              q_val = target_network(next_states, action_tensor, terminals)\n",
+        "              q_next_all.append(q_val)\n",
         "\n",
-        "                # Concatenate along the action dimension to get a tensor of shape [batch_size, num_actions].\n",
-        "                q_next_all = torch.cat(q_next_all, dim=1)\n",
+        "              # Concatenate along the action dimension to get a tensor of shape [batch_size, num_actions].\n",
+        "              q_next_all = torch.cat(q_next_all, dim=1)\n",
         "\n",
-        "                # Take the maximum Q-value across actions for each next state.\n",
-        "                max_next_q_values, _ = q_next_all.max(dim=1, keepdim=True)\n",
+        "              # Take the maximum Q-value across actions for each next state.\n",
+        "              max_next_q_values, _ = q_next_all.max(dim=1, keepdim=True)\n",
         "\n",
         "            # Compute the target Q-values using the Bellman update.\n",
         "            target_q_values = rewards + gamma * max_next_q_values * (1 - terminals)\n",
