--- a/replication_of_rl_lateral_controller_for_autonomous_vehicles.ipynb
+++ b/replication_of_rl_lateral_controller_for_autonomous_vehicles.ipynb
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "collapsed": true,
         "id": "AAc_-AeGEE5H",
@@ -76,7 +76,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "-ZwGd9eVEWGY"
       },
@@ -114,7 +114,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "y922XK-cIewr",
         "colab": {
@@ -156,7 +156,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "2HbWr4urTXQ8"
       },
@@ -300,7 +300,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "SJ68SiyJTSx7"
       },
@@ -400,7 +400,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "7g2c9HRSJ8Xs"
       },
@@ -561,7 +561,7 @@
       "metadata": {
         "id": "ydU55ZY5eX4U"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -575,7 +575,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "jU_TDnfv7CzO"
       },
@@ -638,7 +638,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "gPl1lptqKdAy"
       },
@@ -1319,7 +1319,12 @@
             "Ep  476/1000 │ Steps:  27 │ Ep Return:   27.00 │ Avg Return (100 ep):   25.37 │ Epsilon:0.855 │ Buffer: 11437 │ Loss:0.0037\n",
             "Ep  477/1000 │ Steps:  16 │ Ep Return:   16.00 │ Avg Return (100 ep):   25.38 │ Epsilon:0.855 │ Buffer: 11453 │ Loss:0.0007\n",
             "Ep  478/1000 │ Steps:  14 │ Ep Return:   14.00 │ Avg Return (100 ep):   25.20 │ Epsilon:0.855 │ Buffer: 11467 │ Loss:0.0007\n",
-            "Ep  479/1000 │ Steps:  23 │ Ep Return:   23.00 │ Avg Return (100 ep):   25.32 │ Epsilon:0.854 │ Buffer: 11490 │ Loss:0.0005\n"
+            "Ep  479/1000 │ Steps:  23 │ Ep Return:   23.00 │ Avg Return (100 ep):   25.32 │ Epsilon:0.854 │ Buffer: 11490 │ Loss:0.0005\n",
+            "Ep  480/1000 │ Steps:  26 │ Ep Return:   26.00 │ Avg Return (100 ep):   25.45 │ Epsilon:0.854 │ Buffer: 11516 │ Loss:0.1336\n",
+            "Ep  481/1000 │ Steps:  19 │ Ep Return:   19.00 │ Avg Return (100 ep):   25.02 │ Epsilon:0.854 │ Buffer: 11535 │ Loss:0.0088\n",
+            "Ep  482/1000 │ Steps:  13 │ Ep Return:   13.00 │ Avg Return (100 ep):   24.63 │ Epsilon:0.854 │ Buffer: 11548 │ Loss:0.0044\n",
+            "Ep  483/1000 │ Steps:  14 │ Ep Return:   14.00 │ Avg Return (100 ep):   24.57 │ Epsilon:0.854 │ Buffer: 11562 │ Loss:0.0015\n",
+            "Ep  484/1000 │ Steps:   9 │ Ep Return:    9.00 │ Avg Return (100 ep):   24.48 │ Epsilon:0.853 │ Buffer: 11571 │ Loss:0.0007\n"
           ]
         }
       ]
@@ -1522,7 +1527,7 @@
         "id": "NXWkEfG9hXAW",
         "outputId": "f3245c0f-37a5-4f44-ccbd-a8be68c94057"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
