--- a/V2.ipynb
+++ b/V2.ipynb
@@ -920,21 +920,12 @@
         "# Reasonable hyperparameter sizes\n",
         "buffer_size = int(1e5)  # 100k buffer\n",
         "batch_size = 256  # Standard batch size\n",
-        "max_timesteps = int(4e4)  # 40k total timesteps`\n",
-        "\n",
-        "# NEW: Soft update parameters\n",
-        "tau = 0.005  # Small value for soft updates (typically between 0.001 and 0.1)\n",
-        "update_target_freq_steps = 1  # Update softly every step\n",
+        "max_timesteps = int(4e4)  # 40k total timesteps\n",
         "\n",
         "plot_freq_steps = 5000  # Plot every 5000 timesteps\n",
-        "video_freq_steps = 1000  # Record video every 5000 steps\n",
-        "max_video_length = 500  # Maximum number of frames per video\n",
         "\n",
         "# Epsilon-Greedy Parameters\n",
-        "epsilon_start = 1.0\n",
-        "epsilon_end = 0.05\n",
-        "epsilon_decay_steps = int(2e4)  # 20k steps for decay\n",
-        "epsilon = epsilon_start\n",
+        "epsilon = 0.3\n",
         "\n",
         "# Tracking for performance\n",
         "timestep_rewards = []  # Store rewards by timestep\n",
@@ -960,6 +951,7 @@
         "\n",
         "# Initialize State Normalizer\n",
         "normalizer = StateNormalizer(size=state_dim, device=device)\n",
+        "\n",
         "# Update the normalizer with initial state to start populating statistics\n",
         "normalizer.update_from_dict(agent_state)\n",
         "\n",
@@ -977,15 +969,6 @@
         "################################################################################\n",
         "\"\"\"Training & Testing Loop\"\"\"\n",
         "################################################################################\n",
-        "print(\"Starting training loop...\")\n",
-        "print(f\"Device: {device}, Buffer Size: {buffer_size}, Batch Size: {batch_size}\")\n",
-        "print(f\"Epsilon Start: {epsilon_start}, Epsilon End: {epsilon_end}, Decay Steps: {epsilon_decay_steps}\")\n",
-        "print(f\"Learning Rate: {lr}, Gamma: {gamma}\")\n",
-        "print(f\"SOFT UPDATES: Tau = {tau}, Update Frequency: {update_target_freq_steps} steps\")\n",
-        "print(f\"Max Timesteps: {max_timesteps}\")\n",
-        "print(f\"Video Recording: Every {video_freq_steps} steps\")\n",
-        "print(\"=\" * 80)\n",
-        "\n",
         "# Track episode count\n",
         "episode_count = 0\n",
         "\n",
@@ -994,9 +977,6 @@
         "\n",
         "# Track episode-specific rewards for calculating statistics\n",
         "episode_rewards_list = []\n",
-        "\n",
-        "# Initialize video recorder (but not recording yet)\n",
-        "video_recorder = None\n",
         "\n",
         "# Continue until we reach the maximum number of timesteps\n",
         "while total_steps_taken < max_timesteps:\n",
@@ -1011,9 +991,6 @@
         "    lead_state = state_manager.longitudinal_lead_state()\n",
         "    agent_state = state_manager.ego_state_agent(target_id=target_id)\n",
         "\n",
-        "    # Update normalizer with initial state\n",
-        "    normalizer.update_from_dict(agent_state)\n",
-        "\n",
         "    # Update IDM inputs based on initial state\n",
         "    gap = lead_state['x']\n",
         "    delta_velocity = lead_state['vx']\n",
@@ -1022,11 +999,6 @@
         "    episode_step = 0\n",
         "    episode_return = 0.0\n",
         "    done = False\n",
-        "\n",
-        "    should_record_this_episode = (\n",
-        "        total_steps_taken // video_freq_steps <\n",
-        "        (total_steps_taken + episode_step + 1) // video_freq_steps\n",
-        "    )\n",
         "\n",
         "    # Track rewards for this episode specifically\n",
         "    current_episode_rewards = []\n",
@@ -1089,10 +1061,6 @@
         "        # Compute reward based on the new state\n",
         "        reward_components = state_manager.reward_function(obs_old, obs, target_id)\n",
         "        reward = reward_components[0]\n",
-        "\n",
-        "        # Record frame if we're recording this episode\n",
-        "        if video_recorder and video_recorder.recording:\n",
-        "            video_recorder.add_frame(env, reward)\n",
         "\n",
         "        # Add this reward to the current episode's rewards\n",
         "        current_episode_rewards.append(reward)\n",
