--- a/V2.ipynb
+++ b/V2.ipynb
@@ -718,7 +718,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 532
+          "height": 550
         },
         "id": "RYA-H09sIw2_",
         "outputId": "8bc592be-e259-41f1-aab7-1833c0be9952"
@@ -1104,6 +1104,255 @@
         "          f\"Reward/Step: {avg_reward_per_step:.3f}±{std_reward_per_step:.3f} | \"\n",
         "          f\"Epsilon: {epsilon:.3f} | Buffer: {buffer.size():5d} | Loss: {last_loss}\")\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Model"
+      ],
+      "metadata": {
+        "id": "_r2sQPbixCmM"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class ActorCritic(nn.Module):\n",
+        "    def __init__(self, state_dim=4, action_dim=2, hidden_size=128):\n",
+        "        super().__init__()\n",
+        "\n",
+        "        self.network = nn.Sequential(\n",
+        "            nn.Linear(state_dim, hidden_size),\n",
+        "            nn.ReLU(),\n",
+        "            nn.Linear(hidden_size, hidden_size),\n",
+        "            nn.ReLU()\n",
+        "        )\n",
+        "\n",
+        "        # Policy head (actor)\n",
+        "        self.actor = nn.Linear(hidden_size, action_dim)\n",
+        "\n",
+        "        # Value head (critic)\n",
+        "        self.critic = nn.Linear(hidden_size, 1)\n",
+        "\n",
+        "    def forward(self, x):\n",
+        "        features = self.network(x)\n",
+        "        return self.actor(features), self.critic(features)"
+      ],
+      "metadata": {
+        "id": "DTaPNtE6wzGy"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Imports"
+      ],
+      "metadata": {
+        "id": "knH4q9nbxAhc"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "import torch.nn.functional as F\n",
+        "import numpy as np\n",
+        "# Workaround for gym compatibility\n",
+        "if not hasattr(np, 'bool8'):\n",
+        "    np.bool8 = np.bool_\n",
+        "import tqdm\n",
+        "import gym\n",
+        "from random import randint\n",
+        "from torch.utils.data import DataLoader, TensorDataset\n",
+        "import matplotlib.pyplot as plt"
+      ],
+      "metadata": {
+        "id": "riOy8x85xS5-"
+      },
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Hyperparameters"
+      ],
+      "metadata": {
+        "id": "oGaojxXZxY7f"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "action_dim=2,\n",
+        "T=500*2,\n",
+        "K=10,\n",
+        "batch_size=64,\n",
+        "gamma=0.99,\n",
+        "device='cuda',\n",
+        "vf_coeff_cl=0.5,\n",
+        "ent_coef_c2=0.01,\n",
+        "nb_episodes=1000,\n",
+        "epsilon=0.2,\n",
+        "gae_lambda=0.99,\n",
+        "max_episodes_per_rollout=10"
+      ],
+      "metadata": {
+        "id": "gIIQgZuXw5fB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for episode in tdqm.tdqm(range(nb_episodes))\n",
+        "        # PPO Initialization\n",
+        "        advantages = torch.zeros(T, dtype=torch.float32, device=device)\n",
+        "        buffer_states = torch.zeros((T, state_dim), dtype=torch.float32, device=device)\n",
+        "        buffer_actions = torch.zeros((T), dtype=torch.long, device=device)\n",
+        "        buffer_log_probs = torch.zeros((T), dtype=torch.float32, device=device)\n",
+        "        buffer_state_values = torch.zeros((T+1), dtype=torch.float32, device=device)\n",
+        "        buffer_rewards = torch.zeros((T), dtype=torch.float32, device=device)\n",
+        "        buffer_is_terminal = torch.zeros((T), dtype=torch.float32, device=device)\n",
+        "\n",
+        "        # Episode control variables\n",
+        "        episodes_completed_in_rollout = 0\n",
+        "        t = 0  # Actual timesteps collected\n",
+        "\n",
+        "        # Env Initialization\n",
+        "        obs, _ = env.reset()\n",
+        "        state_manager = ENV(obs, 0.0)\n",
+        "\n",
+        "        # IDM Initialization\n",
+        "        ego_state_idm = state_manager.ego_state_idm()\n",
+        "        lead_state = state_manager.longitudinal_lead_state()\n",
+        "        agent_state = state_manager.ego_state_agent(target_id=target_id)\n",
+        "\n",
+        "        # Update IDM inputs based on initial state\n",
+        "        gap = lead_state['x']\n",
+        "        delta_velocity = lead_state['vx']\n",
+        "        input_variables = [gap, ego_state_idm['vx'], delta_velocity]\n",
+        "\n",
+        "        episode_step = 0\n",
+        "        episode_return = 0.0\n",
+        "        done = False"
+      ],
+      "metadata": {
+        "id": "HZ040slOxLts"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "        # Collect trajectories with dual stopping condition\n",
+        "        while t < T and episodes_completed_in_rollout < max_episodes_per_rollout:\n",
+        "\n",
+        "            gap_control = Gap_Controller(obs, following_gap_threshold=30)\n",
+        "            activated_target_lane = gap_control.lane_checker()\n",
+        "\n",
+        "            # Determine target lane\n",
+        "            target_id = activated_target_lane\n",
+        "            agent_state = state_manager.ego_state_agent(target_id=target_id)\n",
+        "\n",
+        "\n",
+        "            # Replace with agent state\n",
+        "            obs = # replace with state from env\n",
+        "\n",
+        "            # Get action and value from model\n",
+        "            with torch.no_grad():\n",
+        "                logits, value = model(obs)\n",
+        "\n",
+        "            logits, value = logits.squeeze(0), value.squeeze(0)\n",
+        "            m = torch.distributions.Categorical(logits=logits)\n",
+        "\n",
+        "\n",
+        "            # Agent Action\n",
+        "            agent_action = m.sample()\n",
+        "\n",
+        "            # IDM Action\n",
+        "            idm_acceleration = ego_vehicle_idm.longitudinal_controller(input_variables)\n",
+        "            longitudinal_control = idm_acceleration\n",
+        "\n",
+        "            # Transform agent action to steering angle\n",
+        "            lateral_control = state_manager.steering_angle(agent_action, L)\n",
+        "\n",
+        "            # Combine longitudinal and lateral actions\n",
+        "            action = [longitudinal_control, lateral_control]\n",
+        "\n",
+        "            # Take action in environment\n",
+        "            log_prob = m.log_prob(action)\n",
+        "            next_obs, reward, done, _ = env.step(action)\n",
+        "\n",
+        "            # Store trajectory information\n",
+        "            buffer_states[t] = obs.squeeze(0)\n",
+        "            buffer_actions[t] = action\n",
+        "            buffer_log_probs[t] = log_prob\n",
+        "            buffer_state_values[t] = value\n",
+        "            buffer_rewards[t] = reward\n",
+        "            buffer_is_terminal[t] = done\n",
+        "\n",
+        "            t += 1  # Increment timestep counter\n",
+        "\n",
+        "            # If episode is done, track results and increment episode counter\n",
+        "            if done:\n",
+        "                episodes_completed_in_rollout += 1\n",
+        "                total_env_episodes += 1\n",
+        "\n",
+        "                # Reset environment\n",
+        "                envs.reset()\n",
+        "\n",
+        "        # Actual number of timesteps collected (might be less than T)\n",
+        "        actual_T = t"
+      ],
+      "metadata": {
+        "id": "OnxRaicVxxrv"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Advantages"
+      ],
+      "metadata": {
+        "id": "e6P3dPnvyzug"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "        # Calculate advantages using GAE with proper terminal handling\n",
+        "        gae = 0\n",
+        "        advantages = torch.zeros(actual_T, dtype=torch.float32, device=device)\n",
+        "\n",
+        "        # Backward iteration through collected timesteps\n",
+        "        for t_idx in range(actual_T-1, -1, -1):\n",
+        "            if buffer_is_terminal[t_idx]:\n",
+        "                terminal = 1\n",
+        "                next_value = 0  # Terminal states have no next value\n",
+        "            else:\n",
+        "                terminal = 0\n",
+        "                if t_idx == actual_T-1:\n",
+        "                    next_value = buffer_state_values[actual_T]  # Bootstrap value\n",
+        "                else:\n",
+        "                    next_value = buffer_state_values[t_idx+1]\n",
+        "\n",
+        "            delta = buffer_rewards[t_idx] + gamma * next_value * (1-terminal) - buffer_state_values[t_idx]\n",
+        "            gae = delta + (gamma * gae_lambda) * gae * (1-terminal)\n",
+        "            advantages[t_idx] = gae"
+      ],
+      "metadata": {
+        "id": "1EdYzHAOyzUa"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
