--- a/V3.ipynb
+++ b/V3.ipynb
@@ -21,14 +21,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "collapsed": true,
         "id": "AAc_-AeGEE5H",
-        "outputId": "d09b906b-6ca1-4814-dade-4cc205eb6233"
+        "outputId": "56e99f23-ee06-4a9b-c678-bda805bed9b5"
       },
       "outputs": [
         {
@@ -36,7 +36,8 @@
           "name": "stdout",
           "text": [
             "Requirement already satisfied: pygame in /usr/local/lib/python3.11/dist-packages (2.6.1)\n",
-            "Requirement already satisfied: highway-env in /usr/local/lib/python3.11/dist-packages (1.10.1)\n",
+            "Collecting highway-env\n",
+            "  Downloading highway_env-1.10.1-py3-none-any.whl.metadata (16 kB)\n",
             "Requirement already satisfied: gymnasium>=1.0.0a2 in /usr/local/lib/python3.11/dist-packages (from highway-env) (1.1.1)\n",
             "Requirement already satisfied: farama-notifications>=0.0.1 in /usr/local/lib/python3.11/dist-packages (from highway-env) (0.0.4)\n",
             "Requirement already satisfied: numpy>=1.21.0 in /usr/local/lib/python3.11/dist-packages (from highway-env) (2.0.2)\n",
@@ -48,7 +49,7 @@
             "Requirement already satisfied: typing-extensions>=4.3.0 in /usr/local/lib/python3.11/dist-packages (from gymnasium>=1.0.0a2->highway-env) (4.14.0)\n",
             "Requirement already satisfied: contourpy>=1.0.1 in /usr/local/lib/python3.11/dist-packages (from matplotlib->highway-env) (1.3.2)\n",
             "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.11/dist-packages (from matplotlib->highway-env) (0.12.1)\n",
-            "Requirement already satisfied: fonttools>=4.22.0 in /usr/local/lib/python3.11/dist-packages (from matplotlib->highway-env) (4.58.1)\n",
+            "Requirement already satisfied: fonttools>=4.22.0 in /usr/local/lib/python3.11/dist-packages (from matplotlib->highway-env) (4.58.4)\n",
             "Requirement already satisfied: kiwisolver>=1.3.1 in /usr/local/lib/python3.11/dist-packages (from matplotlib->highway-env) (1.4.8)\n",
             "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.11/dist-packages (from matplotlib->highway-env) (24.2)\n",
             "Requirement already satisfied: pillow>=8 in /usr/local/lib/python3.11/dist-packages (from matplotlib->highway-env) (11.2.1)\n",
@@ -56,7 +57,11 @@
             "Requirement already satisfied: python-dateutil>=2.7 in /usr/local/lib/python3.11/dist-packages (from matplotlib->highway-env) (2.9.0.post0)\n",
             "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.11/dist-packages (from pandas->highway-env) (2025.2)\n",
             "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.11/dist-packages (from pandas->highway-env) (2025.2)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.11/dist-packages (from python-dateutil>=2.7->matplotlib->highway-env) (1.17.0)\n"
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.11/dist-packages (from python-dateutil>=2.7->matplotlib->highway-env) (1.17.0)\n",
+            "Downloading highway_env-1.10.1-py3-none-any.whl (104 kB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m105.0/105.0 kB\u001b[0m \u001b[31m5.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: highway-env\n",
+            "Successfully installed highway-env-1.10.1\n"
           ]
         }
       ],
@@ -76,7 +81,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 9,
       "metadata": {
         "id": "-ZwGd9eVEWGY"
       },
@@ -90,16 +95,24 @@
         "from matplotlib import pyplot as plt\n",
         "import pygame\n",
         "import numpy as np\n",
-        "\n",
-        "\n",
-        "from IPython.display import Image, display\n",
-        "from collections import deque\n",
-        "import random\n",
+        "import os\n",
         "import torch\n",
         "import torch.nn as nn\n",
         "import torch.nn.functional as F\n",
+        "import tqdm\n",
+        "import gym\n",
+        "from random import randint\n",
+        "from torch.utils.data import DataLoader, TensorDataset\n",
+        "import matplotlib.pyplot as plt\n",
+        "from collections import deque\n",
+        "import random\n",
         "import torch.optim as optim\n",
         "import random\n",
+        "\n",
+        "# Workaround for gym compatibility\n",
+        "if not hasattr(np, 'bool8'):\n",
+        "    np.bool8 = np.bool_\n",
+        "\n",
         "%matplotlib inline"
       ]
     },
@@ -114,24 +127,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "y922XK-cIewr",
-        "outputId": "887ec9e3-5f5f-41d7-ead8-d0c38158c04c"
+        "outputId": "7a30eb53-04f4-4410-8ea3-f31e03d63076"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<highway_env.envs.common.action.ContinuousAction at 0x7b170dafa6d0>"
+              "<highway_env.envs.common.action.ContinuousAction at 0x7dd1b56b4650>"
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 3
         }
       ],
       "source": [
@@ -156,7 +169,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 4,
       "metadata": {
         "id": "2HbWr4urTXQ8"
       },
@@ -300,159 +313,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
-      "metadata": {
-        "id": "SJ68SiyJTSx7"
-      },
-      "outputs": [],
       "source": [
-        "class Agent(nn.Module):\n",
-        "  \"\"\"\n",
-        "  s = (x, y, vx, vy, thetha, lane_width, lane_id, self_curvature, longitudinal_acceleration) ∈ S\n",
+        "class ActorCritic(nn.Module):\n",
+        "    def __init__(self, state_dim=4, action_dim=2, hidden_size=128):\n",
+        "        super().__init__()\n",
         "\n",
-        "  Lateral Agent State:\n",
-        "  x = vehicle x position\n",
-        "  y = vehicle y position\n",
-        "  vx = vehicle speed (longitudinal)\n",
-        "  thetha = yaw angle (heading)\n",
-        "  lane_width = width of the lane\n",
-        "  lane_id = target lane id\n",
-        "  self_curvature = road curvature at the vehicle's position\n",
-        "  longitudinal_acceleration = vehicle longitudinal acceleration\n",
-        "  \"\"\"\n",
-        "  def __init__(self, state_dim):\n",
-        "    super(Agent, self).__init__()\n",
-        "    self.state_dim = state_dim\n",
-        "    # Define Network A & C\n",
-        "    self.networkA = nn.Sequential(\n",
-        "        nn.Linear(self.state_dim, 100),\n",
-        "        nn.Linear(100, 1),\n",
-        "        nn.Softplus()\n",
-        "    )\n",
-        "    self.networkC = nn.Sequential(\n",
-        "        nn.Linear(self.state_dim + 1, 100),\n",
-        "        nn.ReLU(),\n",
-        "        nn.Linear(100, 1),\n",
-        "    )\n",
+        "        # Policy head (actor)\n",
+        "        self.actor = nn.Sequential(\n",
+        "            nn.Linear(state_dim, hidden_size),\n",
+        "            nn.Tanh(),\n",
+        "            nn.Linear(hidden_size, hidden_size),\n",
+        "            nn.Tanh(),\n",
+        "            nn.Linear(hidden_size, action_dim)\n",
+        "        )\n",
         "\n",
-        "    # Define Network B\n",
-        "    self.networkB1 = nn.Sequential(\n",
-        "        nn.Linear(self.state_dim, 150),\n",
-        "        nn.ReLU(),\n",
-        "        nn.Linear(150, 1),\n",
-        "    )\n",
-        "    self.networkB2 = nn.Sequential(\n",
-        "        nn.Linear(self.state_dim, 150),\n",
-        "        nn.ReLU(),\n",
-        "        nn.Linear(150, 1),\n",
-        "    )\n",
-        "    self.networkB3 = nn.Sequential(\n",
-        "        nn.Linear(self.state_dim, 150),\n",
-        "        nn.ReLU(),\n",
-        "        nn.Linear(150, 1),\n",
-        "    )\n",
+        "        # Value head (critic)\n",
+        "        self.critic = nn.Sequential(\n",
+        "            nn.Linear(state_dim, hidden_size),\n",
+        "            nn.Tanh(),\n",
+        "            nn.Linear(hidden_size, hidden_size),\n",
+        "            nn.Tanh(),\n",
+        "            nn.Linear(hidden_size, 1)\n",
+        "        )\n",
         "\n",
-        "  def forward(self, state, a, terminal):\n",
-        "    \"\"\"\n",
-        "    Q(s,a) = A(s)*(B(s)-a)^2 + C(s)\n",
-        "    \"\"\"\n",
-        "    if isinstance(state, dict):\n",
-        "      state_tensor = torch.tensor(\n",
-        "          [state[key] for key in ['vx', 'longitudinal_acceleration', 'x', 'y', 'thetha', 'lane_id', 'lane_width', 'self_curvature']],\n",
-        "          dtype=torch.float32\n",
-        "      ).unsqueeze(0)\n",
-        "    else:\n",
-        "        self.state = state\n",
-        "    # Use a directly if it's already a tensor\n",
-        "    self.a = a if isinstance(a, torch.Tensor) else torch.tensor([[a]], dtype=torch.float32)\n",
-        "    self.terminal_condition = terminal if isinstance(terminal, torch.Tensor) else torch.tensor([[terminal]], dtype=torch.float32)\n",
-        "\n",
-        "    # Output of the Networks\n",
-        "    self.A = self.networkA(self.state)\n",
-        "    self.C = self.networkC(torch.concat((self.state, self.terminal_condition), dim=1))\n",
-        "    self.B = torch.max(self.networkB1(self.state) * self.networkB2(self.state),\n",
-        "                         self.networkB3(self.state))\n",
-        "\n",
-        "    # Q-function Approximation\n",
-        "    q_value = -self.A * ((self.B - self.a) ** 2) + self.C\n",
-        "\n",
-        "    return q_value\n",
-        "\n",
-        "  def action(self, state):\n",
-        "      # Convert it to a tensor\n",
-        "      if isinstance(state, dict):\n",
-        "          state_tensor = torch.tensor(\n",
-        "              [state[key] for key in ['vx', 'longitudinal_acceleration', 'x', 'y', 'thetha', 'lane_id', 'lane_width', 'self_curvature']],\n",
-        "              dtype=torch.float32\n",
-        "          ).unsqueeze(0)\n",
-        "      else:\n",
-        "          state_tensor = state\n",
-        "      self.state = state_tensor\n",
-        "      self.B = torch.max(self.networkB1(self.state) * self.networkB2(self.state),\n",
-        "                         self.networkB3(self.state))\n",
-        "      return self.B"
-      ]
-    },
-    {
-      "cell_type": "markdown",
+        "    def forward(self, x):\n",
+        "        return self.actor(x), self.critic(x)"
+      ],
       "metadata": {
-        "id": "Vo-7aVU9J681"
+        "id": "MW5pZ2IxtbyI"
       },
-      "source": [
-        "Experience Buffer"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 21,
-      "metadata": {
-        "id": "7g2c9HRSJ8Xs"
-      },
-      "outputs": [],
-      "source": [
-        "from collections import deque # Ensure imported\n",
-        "\n",
-        "class Experience_Buffer():\n",
-        "    \"\"\"\n",
-        "    Stores transitions as tuples of NumPy arrays (state_vec, action_vec, reward_vec, next_state_vec, terminal_vec).\n",
-        "    \"\"\"\n",
-        "    def __init__(self, buffer_size):\n",
-        "        self.buffer_size = buffer_size\n",
-        "        self.buffer = deque(maxlen=self.buffer_size)\n",
-        "\n",
-        "    def add(self, state_vec, action, reward, next_state_vec, terminal_condition):\n",
-        "        state_np = np.asarray(state_vec, dtype=np.float32)\n",
-        "        next_state_np = np.asarray(next_state_vec, dtype=np.float32)\n",
-        "        action_np = np.asarray([action], dtype=np.float32)\n",
-        "        reward_np = np.asarray([reward], dtype=np.float32)\n",
-        "        terminal_np = np.asarray([float(terminal_condition)], dtype=np.float32)\n",
-        "\n",
-        "        self.transition = (state_np, action_np, reward_np, next_state_np, terminal_np)\n",
-        "        self.buffer.append(self.transition)\n",
-        "\n",
-        "    def sample_experience(self, batch_size, device):\n",
-        "        \"\"\" Samples batch and returns Tensors. \"\"\"\n",
-        "        batch = random.sample(self.buffer, batch_size)\n",
-        "        states, actions, rewards, next_states, terminals = zip(*batch)\n",
-        "\n",
-        "        states_np = np.stack(states)\n",
-        "        actions_np = np.stack(actions)\n",
-        "        rewards_np = np.stack(rewards)\n",
-        "        next_states_np = np.stack(next_states)\n",
-        "        terminals_np = np.stack(terminals)\n",
-        "\n",
-        "        # Convert final batch arrays to Tensors\n",
-        "        states_tensor = torch.tensor(states_np, dtype=torch.float32, device=device)\n",
-        "        actions_tensor = torch.tensor(actions_np, dtype=torch.float32, device=device)\n",
-        "        rewards_tensor = torch.tensor(rewards_np, dtype=torch.float32, device=device)\n",
-        "        next_states_tensor = torch.tensor(next_states_np, dtype=torch.float32, device=device)\n",
-        "        terminals_tensor = torch.tensor(terminals_np, dtype=torch.float32, device=device)\n",
-        "\n",
-        "        return states_tensor, actions_tensor, rewards_tensor, next_states_tensor, terminals_tensor\n",
-        "\n",
-        "    def size(self):\n",
-        "        return len(self.buffer)"
-      ]
+      "execution_count": 5,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -465,7 +356,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 6,
       "metadata": {
         "id": "ydU55ZY5eX4U"
       },
@@ -584,7 +475,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 7,
       "metadata": {
         "id": "jU_TDnfv7CzO"
       },
@@ -647,7 +538,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 8,
       "metadata": {
         "id": "gPl1lptqKdAy"
       },
@@ -692,37 +583,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
-      "metadata": {
-        "id": "WiV0AFmfkora"
-      },
-      "outputs": [],
-      "source": [
-        "import imageio\n",
-        "import matplotlib.pyplot as plt\n",
-        "import numpy as np\n",
-        "from IPython.display import HTML\n",
-        "from IPython.display import display\n",
-        "from IPython import display as ipythondisplay\n",
-        "import os\n",
-        "\n",
-        "import torch\n",
-        "import torch.nn as nn\n",
-        "import torch.nn.functional as F\n",
-        "import numpy as np\n",
-        "# Workaround for gym compatibility\n",
-        "if not hasattr(np, 'bool8'):\n",
-        "    np.bool8 = np.bool_\n",
-        "import tqdm\n",
-        "import gym\n",
-        "from random import randint\n",
-        "from torch.utils.data import DataLoader, TensorDataset\n",
-        "import matplotlib.pyplot as plt"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {
         "id": "RYA-H09sIw2_"
       },
